force-app/main/default/objects/ABFL_Case_Detail__c/fields/Grievance_Type__c.field-meta.xml
<CustomField>
    <fullName>Grievance_Type__c</fullName>
    <label>Grievance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>