force-app/main/default/objects/ABFL_Case_Detail__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <description>Intent of the case received from UNFYD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>