force-app/main/default/objects/ABFL_Case_Detail__c/fields/IO_Comments__c.field-meta.xml
<CustomField>
    <fullName>IO_Comments__c</fullName>
    <label>IO Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>