force-app/main/default/objects/ABFL_Case_Detail__c/fields/IO_recommended_Amount__c.field-meta.xml
<CustomField>
    <fullName>IO_recommended_Amount__c</fullName>
    <label>IO recommended Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>