force-app/main/default/objects/ABFL_Case_Detail__c/fields/IO_views__c.field-meta.xml
<CustomField>
    <fullName>IO_views__c</fullName>
    <label>IO views</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABFL decision upheld</fullName>
            </value>
            <value>
                <fullName>ABFL decision over-ruled</fullName>
            </value>
            <value>
                <fullName>ABFL decision amended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>