force-app/main/default/objects/ABFL_Case_Detail__c/fields/Is_Potential_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Is_Potential_Complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>POTENTIALCOMPLAINT flag from UNFYD</description>
    <label>Is Potential Complaint</label>
    <type>Checkbox</type>
</CustomField>