force-app/main/default/objects/ABFL_Case_Detail__c/fields/IsAttachmentFlag__c.field-meta.xml
<CustomField>
    <fullName>IsAttachmentFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is attachment available against the email.</description>
    <label>Attachment Flag</label>
    <type>Checkbox</type>
</CustomField>