force-app/main/default/objects/ABFL_Case_Detail__c/fields/IsMultipleintent__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleintent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ISMULTIPLEINTENT flag coming from UNFYD</description>
    <label>Is Multipleintent</label>
    <type>Checkbox</type>
</CustomField>