force-app/main/default/objects/ABFL_Case_Detail__c/fields/IsMultipleLAN__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleLAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Multiple LAN Flag</description>
    <label>Multiple LAN</label>
    <type>Checkbox</type>
</CustomField>