force-app/main/default/objects/ABFL_Case_Detail__c/fields/IsRegisteredCustomer__c.field-meta.xml
<CustomField>
    <fullName>IsRegisteredCustomer__c</fullName>
    <description>Is Registered Customer flag of the Case</description>
    <label>Registered Customer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>