force-app/main/default/objects/ABFL_Case_Detail__c/fields/ISREKYC__c.field-meta.xml
<CustomField>
    <fullName>ISREKYC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes or No value . Mandatory for Issue Type Code rrkre01</description>
    <label>ISREKYC</label>
    <type>Checkbox</type>
</CustomField>