force-app/main/default/objects/ABFL_Case_Detail__c/fields/IsSMT__c.field-meta.xml
<CustomField>
    <fullName>IsSMT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Senior Management flag</description>
    <label>SMT</label>
    <type>Checkbox</type>
</CustomField>