force-app/main/default/objects/ABFL_Case_Detail__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay in Processing</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not processed</fullName>
            </value>
            <value>
                <fullName>Incorrect Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>