force-app/main/default/objects/ABFL_Case_Detail__c/fields/IsTrailmail__c.field-meta.xml
<CustomField>
    <fullName>IsTrailmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ISTRAILMAIL Flag coming from UNFYD</description>
    <label>IsTrailmail</label>
    <type>Checkbox</type>
</CustomField>