force-app/main/default/objects/ABFL_Case_Detail__c/fields/Junk_Type__c.field-meta.xml
<CustomField>
    <fullName>Junk_Type__c</fullName>
    <label>Junk Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Different Lob</fullName>
            </value>
            <value>
                <fullName>Spam Mail</fullName>
            </value>
            <value>
                <fullName>Irrelevant</fullName>
            </value>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Internal Mails</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>