force-app/main/default/objects/ABFL_Case_Detail__c/fields/KYCComplied__c.field-meta.xml
<CustomField>
    <fullName>KYCComplied__c</fullName>
    <description>KYC Complied Value</description>
    <label>KYCComplied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>