force-app/main/default/objects/ABFL_Case_Detail__c/fields/LAN__c.field-meta.xml
<CustomField>
    <fullName>LAN__c</fullName>
    <description>LAN coming from UNFYD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>