force-app/main/default/objects/ABFL_Case_Detail__c/fields/Loan_Agreement_Document__c.field-meta.xml
<CustomField>
    <fullName>Loan_Agreement_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Agreement Document</label>
    <type>Checkbox</type>
</CustomField>