force-app/main/default/objects/ABFL_Case_Detail__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Non Pre-Approved</fullName>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
            </value>
            <value>
                <fullName>Pre-Qualified</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>