force-app/main/default/objects/ABFL_Case_Detail__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>LOB coming from UNFYD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LOB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>