force-app/main/default/objects/ABFL_Case_Detail__c/fields/Lock_in_Period__c.field-meta.xml
<CustomField>
    <fullName>Lock_in_Period__c</fullName>
    <label>Lock in Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>