force-app/main/default/objects/ABFL_Case_Detail__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <description>Created for Retail report</description>
    <formula>Case__r.Owner:User.Manager.FirstName + &apos; &apos;+Case__r.Owner:User.Manager.LastName</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>