force-app/main/default/objects/ABFL_Case_Detail__c/fields/MHNUMBER__c.field-meta.xml
<CustomField>
    <fullName>MHNUMBER__c</fullName>
    <description>Mood Stamp value</description>
    <label>MHNUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>