force-app/main/default/objects/ABFL_Case_Detail__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <label>Mode of Payment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMPS</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>TPT</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>CHEQUE</fullName>
            </value>
            <value>
                <fullName>PAY ORDER</fullName>
            </value>
            <value>
                <fullName>CHQ DEPOSITED - CREDIT NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>