force-app/main/default/objects/ABFL_Case_Detail__c/fields/Moodstamp__c.field-meta.xml
<CustomField>
    <fullName>Moodstamp__c</fullName>
    <description>Mood stamp of the customer</description>
    <label>Mood Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>