force-app/main/default/objects/ABFL_Case_Detail__c/fields/MSME_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>MSME_Issue_Type__c</fullName>
    <label>MSME Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delay in Application processing</fullName>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
            </value>
            <value>
                <fullName>Delay in Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>