force-app/main/default/objects/ABFL_Case_Detail__c/fields/Nature_of_Waiver_Refund__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Waiver_Refund__c</fullName>
    <label>Nature of Waiver/Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>Refund related</fullName>
            </value>
            <value>
                <fullName>TDS related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>