force-app/main/default/objects/ABFL_Case_Detail__c/fields/New_Acc_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Acc_Type__c</fullName>
    <label>New Acc Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>