force-app/main/default/objects/ABFL_Case_Detail__c/fields/New_Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>New_Bank_Account_No__c</fullName>
    <label>New Bank Account No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>