force-app/main/default/objects/ABFL_Case_Detail__c/fields/ONEABCCaseId__c.field-meta.xml
<CustomField>
    <fullName>ONEABCCaseId__c</fullName>
    <description>One ABC Case ID</description>
    <label>ONEABCCaseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>