force-app/main/default/objects/ABFL_Case_Detail__c/fields/ONEABCSubTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ONEABCSubTypeCode__c</fullName>
    <description>One ABC Subtype Code</description>
    <label>ONEABCSubTypeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>