force-app/main/default/objects/ABFL_Case_Detail__c/fields/Open_Stage_Owner_Email_Team__c.field-meta.xml
<CustomField>
    <fullName>Open_Stage_Owner_Email_Team__c</fullName>
    <label>Open Stage Owner Email Team</label>
    <type>TextArea</type>
</CustomField>