force-app/main/default/objects/ABFL_Case_Detail__c/fields/Open_Stage_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Open_Stage_Owner_Id__c</fullName>
    <label>Open Stage Owner Id</label>
    <type>TextArea</type>
</CustomField>