force-app/main/default/objects/ABFL_Case_Detail__c/fields/Ops_Involvement_Required__c.field-meta.xml
<CustomField>
    <fullName>Ops_Involvement_Required__c</fullName>
    <label>Ops Involvement Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>