force-app/main/default/objects/ABFL_Case_Detail__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <label>Other Reason</label>
    <type>TextArea</type>
</CustomField>