force-app/main/default/objects/ABFL_Case_Detail__c/fields/Part_Payment_Effect__c.field-meta.xml
<CustomField>
    <fullName>Part_Payment_Effect__c</fullName>
    <label>Part Payment Effect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change in EMI</fullName>
            </value>
            <value>
                <fullName>Change in Tenure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>