force-app/main/default/objects/ABFL_Case_Detail__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <label>Partner Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moneyview PL &amp; Top-Up</fullName>
            </value>
            <value>
                <fullName>Ola</fullName>
            </value>
            <value>
                <fullName>Byju&apos;s</fullName>
            </value>
            <value>
                <fullName>Mobikwik</fullName>
            </value>
            <value>
                <fullName>Paytm PP</fullName>
            </value>
            <value>
                <fullName>Paytm PL &amp; Top-Up</fullName>
            </value>
            <value>
                <fullName>Paytm MCA</fullName>
            </value>
            <value>
                <fullName>Upwards</fullName>
            </value>
            <value>
                <fullName>Paisa Bazaar</fullName>
            </value>
            <value>
                <fullName>Paisa Bazaar Distribution</fullName>
            </value>
            <value>
                <fullName>Early Salary- Fibe(co-lending)</fullName>
            </value>
            <value>
                <fullName>NAVI(co-lending)</fullName>
            </value>
            <value>
                <fullName>Paytm Transaction EMI</fullName>
            </value>
            <value>
                <fullName>Paytm PL (Distribution)</fullName>
            </value>
            <value>
                <fullName>Jar | B2C Partnership</fullName>
            </value>
            <value>
                <fullName>Insta PL value builder</fullName>
            </value>
            <value>
                <fullName>Cashe (co-lending)</fullName>
            </value>
            <value>
                <fullName>CRED</fullName>
            </value>
            <value>
                <fullName>Lending Kart</fullName>
            </value>
            <value>
                <fullName>Indifi</fullName>
            </value>
            <value>
                <fullName>FinAGG</fullName>
            </value>
            <value>
                <fullName>Loanframe</fullName>
            </value>
            <value>
                <fullName>Valor innovations (cashflo)</fullName>
            </value>
            <value>
                <fullName>Mintwalk fintech (Supermoney)</fullName>
            </value>
            <value>
                <fullName>Flexiloans</fullName>
            </value>
            <value>
                <fullName>Grasim</fullName>
            </value>
            <value>
                <fullName>Groww</fullName>
            </value>
            <value>
                <fullName>Bharatpe(MCA)</fullName>
            </value>
            <value>
                <fullName>Eduvanz</fullName>
            </value>
            <value>
                <fullName>Propelld, Gajju technologies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>