force-app/main/default/objects/ABFL_Case_Detail__c/fields/Payment_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_By__c</fullName>
    <label>Payment Received By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>