force-app/main/default/objects/ABFL_Case_Detail__c/fields/PAYTM_InteractionId__c.field-meta.xml
<CustomField>
    <fullName>PAYTM_InteractionId__c</fullName>
    <description>PAYTM Interaction ID available in the Email</description>
    <label>PAYTM InteractionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>