force-app/main/default/objects/ABFL_Case_Detail__c/fields/PayTmInteractionId__c.field-meta.xml
<CustomField>
    <fullName>PayTmInteractionId__c</fullName>
    <description>PAYTM Interaction ID available in the Email</description>
    <label>PayTmInteractionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>