force-app/main/default/objects/ABFL_Case_Detail__c/fields/Portal_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Portal_Issue_Type__c</fullName>
    <label>Portal Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue with Statement/Document</fullName>
            </value>
            <value>
                <fullName>Issue with Registration</fullName>
            </value>
            <value>
                <fullName>Issue with Login</fullName>
            </value>
            <value>
                <fullName>Issue with Wrong or Missing Account/Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>