force-app/main/default/objects/ABFL_Case_Detail__c/fields/Primary_Erring_Unit__c.field-meta.xml
<CustomField>
    <fullName>Primary_Erring_Unit__c</fullName>
    <label>Primary Erring Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Perception</fullName>
            </value>
            <value>
                <fullName>Collections Team</fullName>
            </value>
            <value>
                <fullName>IT team</fullName>
            </value>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>ASD</fullName>
            </value>
            <value>
                <fullName>Grievance Team</fullName>
            </value>
            <value>
                <fullName>Product Team</fullName>
            </value>
            <value>
                <fullName>Sales/Business</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Policy Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>