force-app/main/default/objects/ABFL_Case_Detail__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Digital Gold</fullName>
            </value>
            <value>
                <fullName>EQUITY</fullName>
            </value>
            <value>
                <fullName>FD-Bond</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Lending products</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Not Product specific</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>PMS/AIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>