force-app/main/default/objects/ABFL_Case_Detail__c/fields/Product_List__c.field-meta.xml
<CustomField>
    <fullName>Product_List__c</fullName>
    <label>Product List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIL</fullName>
            </value>
            <value>
                <fullName>BIL</fullName>
            </value>
            <value>
                <fullName>STUL</fullName>
            </value>
            <value>
                <fullName>STSL</fullName>
            </value>
            <value>
                <fullName>MLAP</fullName>
            </value>
            <value>
                <fullName>LAS</fullName>
            </value>
            <value>
                <fullName>LAP</fullName>
            </value>
            <value>
                <fullName>LRD</fullName>
            </value>
            <value>
                <fullName>POP</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>LC-MM</fullName>
            </value>
            <value>
                <fullName>Infra</fullName>
            </value>
            <value>
                <fullName>Construction Finance</fullName>
            </value>
            <value>
                <fullName>CMG-Insti</fullName>
            </value>
            <value>
                <fullName>CMG-Retail</fullName>
            </value>
            <value>
                <fullName>LAP-Insti</fullName>
            </value>
            <value>
                <fullName>LRD-Insti</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>