force-app/main/default/objects/ABFL_Case_Detail__c/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emi Amount</fullName>
            </value>
            <value>
                <fullName>EMI Date</fullName>
            </value>
            <value>
                <fullName>No. Of Installments</fullName>
            </value>
            <value>
                <fullName>Loan outstanding</fullName>
            </value>
            <value>
                <fullName>Overdues</fullName>
            </value>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>Tenure</fullName>
            </value>
            <value>
                <fullName>Loan Closure Status</fullName>
            </value>
            <value>
                <fullName>Sanction Amount</fullName>
            </value>
            <value>
                <fullName>Calculation</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>T&amp;C</fullName>
            </value>
            <value>
                <fullName>Loan cancellation process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>