force-app/main/default/objects/ABFL_Case_Detail__c/fields/RBI_Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>RBI_Complaint_Number__c</fullName>
    <label>RBI Complaint Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>