force-app/main/default/objects/ABFL_Case_Detail__c/fields/Reason_of_Excess_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Excess_Refund__c</fullName>
    <label>Reason of Excess Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excess Payment</fullName>
            </value>
            <value>
                <fullName>Excess EMI Debited</fullName>
            </value>
            <value>
                <fullName>Loan Cancellation</fullName>
            </value>
            <value>
                <fullName>Incorrect Billing</fullName>
            </value>
            <value>
                <fullName>Service not delivered</fullName>
            </value>
            <value>
                <fullName>Product return</fullName>
            </value>
            <value>
                <fullName>Transaction Dipute</fullName>
            </value>
            <value>
                <fullName>Unauthorised Transaction</fullName>
            </value>
            <value>
                <fullName>Processing Error</fullName>
            </value>
            <value>
                <fullName>Account closure</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>