force-app/main/default/objects/ABFL_Case_Detail__c/fields/Recovery_Type__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Type__c</fullName>
    <label>Recovery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FORECLOSURE</fullName>
            </value>
            <value>
                <fullName>PART PAYMENT</fullName>
            </value>
            <value>
                <fullName>EMI</fullName>
            </value>
            <value>
                <fullName>OVERDUE AMOUNT</fullName>
            </value>
            <value>
                <fullName>PENAL CHARGES</fullName>
            </value>
            <value>
                <fullName>PROCESSNG FEES</fullName>
            </value>
            <value>
                <fullName>PRE EMI / BPI</fullName>
            </value>
            <value>
                <fullName>BOUNCE CHARGES</fullName>
            </value>
            <value>
                <fullName>FCL CHARGES</fullName>
            </value>
            <value>
                <fullName>SETTLEMENT - FULL</fullName>
            </value>
            <value>
                <fullName>SETTLEMENT - PART</fullName>
            </value>
            <value>
                <fullName>SWAPPING CHARGES</fullName>
            </value>
            <value>
                <fullName>LEGAL CHARGES</fullName>
            </value>
            <value>
                <fullName>SWITCH FEES</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>