force-app/main/default/objects/ABFL_Case_Detail__c/fields/Registration_Links__c.field-meta.xml
<CustomField>
    <fullName>Registration_Links__c</fullName>
    <label>Registration Link</label>
    <type>Url</type>
</CustomField>