force-app/main/default/objects/ABFL_Case_Detail__c/fields/ReKycSubmitted__c.field-meta.xml
<CustomField>
    <fullName>ReKycSubmitted__c</fullName>
    <description>Rekycsubmitted of the case</description>
    <label>ReKycSubmitted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>