force-app/main/default/objects/ABFL_Case_Detail__c/fields/REKYCURL__c.field-meta.xml
<CustomField>
    <fullName>REKYCURL__c</fullName>
    <description>Rekycurl of the case</description>
    <label>REKYCURL</label>
    <type>Url</type>
</CustomField>